# animesubs

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  batch_translate.py  fix-appimage.sh  package.json  pyproject.toml  setup.py  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
animesubs/: __init__.py  constants.py  exceptions.py  ffmpeg.py  providers.py  text_utils.py  translator.py  video_processor.py
animesubs/scripts/: batch_translate.py  test_single_file.py  translate_single.py
gui/: Cargo.toml
gui/src/: actions.rs  app.rs  lib.rs  main.rs  platform_theme.rs  state.rs  ui.rs
quality/: baseline.json  metricsSummary.json  qualityReport.json
src/: App.vue  i18n.ts
src-tauri/: Cargo.toml  lib.d  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/commands/: backup.rs  embedding.rs  mod.rs  subtitle.rs  translation.rs  utils.rs  video.rs
src-tauri/src/providers/: context.rs  mod.rs
src/api/: animesubs.ts
src/components/: SettingsModal.vue
src/composables/: useAppTheme.ts  useSettingsState.ts  useTranslationJob.ts  useTranslationOptions.ts  useVideoFiles.ts
src/config/: settings.ts
src/types/: domain.ts
tests/: README.md  conftest.py  test_exceptions.py  test_translator.py  test_video_processor.py
