[package]
name = "gui"
authors = ["Ênrell <enrellsa10@proton.me>"]
version = "0.1.0"
edition = "2024"
include = ["LICENSE-MIT", "**/*.rs","Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
eframe = { version = "0.33.2", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence", # restore app state when restarting the app
  "wayland"
]}
egui = "0.33.2"
egui_file = "0.24.0"
log = "0.4.28"
anyhow = "1.0.100"
image = { version = "0.25.9", default-features = false, features = ["png"] }

serde = { version = "1.0.228",features = ["derive"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[profile.dev.package."*"]
opt-level = 2

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"
